<resources>
        <string name="app_name">Uz-En Collocations Dictionary</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="about">About</string>
    <string name="uzbek">Uzbek</string>
    <string name="english">English</string>
    <string name="not_found">No data found</string>
    <string name="example">Example</string>
    <string name="do_you_want_to_delete_favorite">Are you sure? do you want to delete this favorite word?</string>
    <string name="author">Author</string>
    <string name="developer">Developer</string>
    <string name="developer_name">Ibroxim Odilov</string>
    <string name="developer_phone">+998999952666</string>
    <string name="developer_email">ibroximbox@gmail.com</string>
    <string name="email_is_copied">Email is copied</string>
    <string name="info">Info</string>
    <string name="word_copied">Sentence copied</string>
    <string name="theme">Theme</string>
    <string name="dark_mode">Dark mode</string>


    <string name="ad_banner">ca-app-pub-5670498136333194/1334693045</string>

        <!--    test-->
<!--    <string name="ad_banner">ca-app-pub-3940256099942544/6300978111</string>-->
</resources>