<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:background="@color/colorPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <include
        layout="@layout/custom_toolbar"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">
        <TextView
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/colorOnPrimary"
            android:text="@string/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/curved_stroke_search_bg"
            android:padding="16dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/author_name"
                android:drawableStart="@drawable/ic_baseline_person_24"
                app:drawableTint="@color/colorOnPrimary"
                android:text="Name"
                android:textSize="16sp"
                android:textColor="@color/colorOnPrimary"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/author_phone"
                android:drawableStart="@drawable/ic_baseline_phone_android_24"
                app:drawableTint="@color/colorOnPrimary"
                android:text="phone"
                android:textSize="16sp"
                android:textColor="@color/colorOnPrimary"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/author_email"
                android:drawableStart="@drawable/ic_baseline_alternate_email_24"
                app:drawableTint="@color/colorOnPrimary"
                android:text="Email"
                android:textSize="16sp"
                android:textColor="@color/colorOnPrimary"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"/>


        </LinearLayout>


        <TextView
            android:layout_marginTop="24dp"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/colorOnPrimary"
            android:text="@string/developer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/curved_stroke_search_bg"
            android:padding="16dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/developer_name"
                android:drawableStart="@drawable/ic_baseline_person_24"
                app:drawableTint="@color/colorOnPrimary"
                android:text="@string/developer_name"
                android:textSize="16sp"
                android:textColor="@color/colorOnPrimary"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/developer_phone"
                android:drawableStart="@drawable/ic_baseline_phone_android_24"
                app:drawableTint="@color/colorOnPrimary"
                android:text="@string/developer_phone"
                android:textSize="16sp"
                android:textColor="@color/colorOnPrimary"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/developer_email"
                android:drawableStart="@drawable/ic_baseline_alternate_email_24"
                app:drawableTint="@color/colorOnPrimary"
                android:text="@string/developer_email"
                android:textSize="16sp"
                android:textColor="@color/colorOnPrimary"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"/>


        </LinearLayout>


    </LinearLayout>




</LinearLayout>